Fix gap between award records

--- a/src/pages/achievements/style.module.css
+++ b/src/pages/achievements/style.module.css
@@ -4,3 +4,7 @@
   gap: 50px;
   margin-top: 50px;
 }
+
+.yearHeader {
+  margin-bottom: -30px;
+}
